complete dockerization
